src/test/ui/generic-associated-types/bugs/issue-89008.stderr
error[E0271]: type mismatch resolving `<Empty<_> as Stream>::Item == Repr`
  --> $DIR/issue-89008.rs:40:9
   |
LL |     fn line_stream<'a, Repr>(&'a self) -> Self::LineStreamFut<'a, Repr> {
   |                        ---- this type parameter
LL |         async {empty()}
   |         ^^^^^^^^^^^^^^^ type mismatch resolving `<Empty<_> as Stream>::Item == Repr`
   |
note: expected this to be `()`
  --> $DIR/issue-89008.rs:18:17
   |
LL |     type Item = ();
   |                 ^^
   = note:   expected unit type `()`
           found type parameter `Repr`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
